[gd_scene load_steps=8 format=1]

[ext_resource path="res://test_map.gd" type="Script" id=1]
[ext_resource path="res://test_tiles.res" type="TileSet" id=2]
[ext_resource path="res://art/map2.png" type="Texture" id=3]
[ext_resource path="res://AI.gd" type="Script" id=4]
[ext_resource path="res://Turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://player.gd" type="Script" id=6]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=7]

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="map"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 80, 80 )
cell/quadrant_size = 10
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 1, 1, 1, 2, 1, 3, 1, 4, 0, 5, 0, 6, 1, 7, 1, 13, 1, 14, 0, 15, 1, 16, 1, 65536, 1, 65537, 1, 65538, 1, 65539, 1, 65540, 0, 65541, 0, 65542, 1, 65543, 1, 65544, 1, 65548, 0, 65549, 1, 65550, 0, 65551, 1, 131072, 1, 131073, 1, 131074, 1, 131075, 1, 131076, 0, 131077, 0, 131078, 1, 131079, 1, 131080, 1, 131084, 0, 131085, 1, 131086, 0, 131087, 1, 131090, 1, 131091, 1, 196608, 1, 196609, 1, 196610, 1, 196611, 1, 196612, 1, 196615, 1, 196616, 1, 196617, 1, 196621, 1, 196622, 0, 196623, 1, 196624, 1, 196625, 1, 196626, 1, 196627, 1, 262144, 1, 262145, 1, 262146, 1, 262147, 1, 262148, 1, 262151, 1, 262152, 1, 262153, 1, 262154, 1, 262157, 1, 262158, 0, 262159, 1, 262160, 1, 262161, 1, 262162, 1, 262163, 1, 327680, 1, 327681, 1, 327682, 1, 327683, 1, 327684, 1, 327687, 1, 327688, 1, 327689, 1, 327690, 1, 327693, 1, 327694, 0, 327695, 1, 327696, 1, 327697, 1, 327698, 1, 327699, 1, 393216, 1, 393217, 1, 393218, 1, 393219, 1, 393220, 1, 393221, 1, 393222, 1, 393223, 1, 393224, 0, 393225, 1, 393226, 1, 393227, 1, 393228, 1, 393229, 1, 393230, 0, 393231, 1, 393232, 1, 393233, 1, 393234, 1, 393235, 1, 458752, 1, 458753, 1, 458754, 1, 458755, 1, 458756, 1, 458757, 0, 458758, 1, 458759, 1, 458760, 0, 458761, 0, 458762, 1, 458763, 1, 458764, 1, 458765, 1, 458766, 0, 458767, 1, 458768, 1, 458769, 1, 458770, 1, 458771, 1, 524288, 1, 524289, 1, 524290, 1, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524301, 1, 524302, 0, 524303, 1, 524304, 1, 524305, 1, 524306, 1, 524307, 1, 589824, 1, 589825, 1, 589826, 1, 589829, 1, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589839, 1, 589840, 1, 589841, 1, 655360, 1, 655361, 1, 655362, 1, 655363, 1, 655364, 1, 655365, 1, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655375, 1, 655376, 1, 720896, 1, 720897, 1, 720898, 1, 720899, 1, 720900, 1, 720901, 1, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720911, 1, 786447, 2, 786448, 2, 786449, 2, 786450, 2, 786451, 2 )

[node name="map1" type="Sprite" parent="map"]

visibility/behind_parent = true
transform/pos = Vector2( 790.028, 493.611 )
texture = ExtResource( 3 )

[node name="AI" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="Turret" parent="AI" instance=ExtResource( 5 )]

transform/pos = Vector2( 1182, 44 )

[node name="Turret1" parent="AI" instance=ExtResource( 5 )]

transform/pos = Vector2( 1276, 760 )

[node name="Player" type="Node2D" parent="."]

script/script = ExtResource( 6 )

[node name="Camera" parent="." instance=ExtResource( 7 )]

editor/display_folded = true
transform/pos = Vector2( -13.8235, -11.2884 )

[node name="Camera2D" parent="Camera"]

transform/pos = Vector2( 803.179, 605.605 )

[node name="bottombar" parent="Camera/ui"]

transform/pos = Vector2( 794.537, 1047.09 )

[connection signal="pressed" from="Camera/ui/abilities/ability1" to="." method="_on_ability1_pressed"]

[connection signal="pressed" from="Camera/ui/abilities/ability2" to="." method="_on_ability2_pressed"]

[connection signal="pressed" from="Camera/ui/abilities/ability3" to="." method="_on_ability3_pressed"]

[connection signal="pressed" from="Camera/ui/abilities/ability4" to="." method="_on_ability4_pressed"]

[connection signal="pressed" from="Camera/ui/EndTurn" to="." method="_on_EndTurn_pressed"]

[connection signal="pressed" from="Camera/ui/Flee" to="." method="_on_Flee_pressed"]


[editable path="Camera"]
