[gd_scene load_steps=5 format=1]

[ext_resource path="res://test_map.gd" type="Script" id=1]
[ext_resource path="res://test_tiles.res" type="TileSet" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Mech.gd" type="Script" id=4]

[node name="root" type="Node2D"]

transform/pos = Vector2( 630.357, 110.14 )
script/script = ExtResource( 1 )

[node name="map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="map"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -196620, 2, -196619, 2, -196618, 2, -196617, 2, -196616, 2, -196615, 2, -196614, 2, -196613, 2, -196612, 2, -196611, 2, -196610, 2, -196609, 2, -131084, 2, -131076, 1, -131073, 2, -65548, 2, -65543, 2, -65537, 2, -12, 2, -7, 2, -1, 2, 65524, 2, 65526, 1, 65529, 2, 65535, 2, 131060, 2, 131061, 2, 131062, 2, 131063, 2, 131064, 2, 131065, 2, 131066, 2, 131067, 2, 131068, 2, 131069, 2, 131070, 2, 131071, 2 )

[node name="mech1" type="Sprite" parent="."]

transform/pos = Vector2( -68.0187, 187.732 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )


